--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr"> 
-    <!-- change "fr" for "en" to put it in english-->
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <title>Put your page title</title> -->
+    <-- <title>Dala by som si pivo</title> -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
 
-        <!-- Put your profile picture here -->
+        <img src="pics/IMG_0215 (1).jpg" alt="GitHub">
 
-        <!-- Put your name here, in Title 1 (h1) -->
+        <h1> Andrejka bez piva </h1>
 
         <p class="bio">
-            <!-- Put a bio -->
+            Studentka, ktora by si fakt dala pivo
         </p>
 
         <div class="links">
 
-            <!-- <a href= put your GitHub link here target="_blank" class="link-btn"> -->
-                <img src="pics/logos/github.png" alt="GitHub">
-                GitHub
+            <a href= put your GitHub link here target="https://github.com/andreafilova-code" class="link-btn"> 
+                <img src=pics/logo/
+               
             </a>
 
            <!-- Linkedin Button -->
