--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="links">
 
             <a href= put your GitHub link here target="https://github.com/andreafilova-code" class="link-btn"> 
-                <img src=pics/logo/
+                <img src=pics/logo/github.png">
                
             </a>
 
