--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
 
-        <img src="pics/IMG_0215 (1).jpg" alt="GitHub" class="profile-img">
+        <img class="profile-img" src="pics/IMG_0215 (1).jpg" alt="GitHub">
 
         <h1> Andrejka bez piva </h1>
 
